// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`memoizedFunc multi params func func name: singleParamArrowFn 1`] = `
Array [
  "a",
  "b",
]
`;

exports[`memoizedFunc multi params func func name: singleParamFn 1`] = `
Array [
  "a",
  "b",
]
`;

exports[`memoizedFunc single param func func name: singleParamArrowFn 1`] = `
Array [
  "a",
]
`;

exports[`memoizedFunc single param func func name: singleParamFn 1`] = `
Array [
  "a",
]
`;
